scss/_ActionGrid.scss
/* http://tympanus.net/Development/PricingTablesInspiration/  */

.action-grid {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-justify-content: center;
	justify-content: center;
	width: 100%;
	margin: 0em;
	// padding: 0em;
	padding-top: 2rem;
	cursor: default;
	border: 1px;
	// background: #fff;
	border-top: 1px solid $sbs-dksand;
}

.todo-list {
	background: rgba(109, 54, 4, 0.3);
	padding-top: 0rem;
	border: 2px;
	border-top: 2px solid black;
}

.todo-list-good {
	background: rgba(79, 222, 79, 0.5);
	padding-top: 0rem;
	border: 2px;
	border-top: 2px solid green;
}

.action-hidden {
	display: none !important
}

.todo-list .action__item {
	-webkit-flex: 1 1 22rem;
	flex: 1 1 22rem;
	height: 32rem;

	&:hover {
		background: $light2-mud;

		.action__icon {
			color: rgb(20, 134, 239);
		}
	}

	.action__text {
		font-size: 1.5rem;
		text-align: left;
	}
}


.action__item {
	-webkit-transition: 0.6s;
	transition: 0.6s;
	position: relative;
	display: -webkit-flex;
	display: flex;
	margin: 1rem;
	padding: 0rem;
	-webkit-flex-direction: column;
	flex-direction: column;
	-webkit-align-items: stretch;
	align-items: stretch;
	text-align: center;
	-webkit-flex: 0 1 20rem;
	flex: 0 1 20rem;
	background-color: rgba(255,255,255,0.3);
	box-shadow: 0 5px 20px rgba(0,0,0,0.05), 0 15px 30px -10px rgba(0,0,0,0.3);
	-webkit-transition: 0.6s;
	transition: 0.6s;
	border-radius: .4rem;	
	border: 4px solid(#344);
	font-size: 1.6rem;
	height: 16rem;

	// if they insist on using an iphone
	@media (max-height: 740px) {
		flex: 0 1 14rem;
		-webkit-flex: 0 1 14rem;
		height: 12rem;
	}

	.action__title {
		transition: 0.6s;
		font-size: 2.0rem;
		width: 100%;
		margin: 0 0 0.25em;
		padding: 0 0 0.5em;
		// color: $sbs-blue;
		// color: rgba(74, 65, 56, 0.82);
		color: $dark-mud;
		border-top: 3px solid $sbs-box;

		// phones
		@media (max-height: 740px) {
			font-size: 1.4rem;
			padding: 0 0 0 0;
			margin: 0 0 0 0;
		}

	}

	.action__icon {
		transition: 0.6s;
		color: $mud-grey;
		width: 100%;
		font-size: 4.0rem;

		// if they insist on using an iphone
		@media (max-height: 740px) {
			font-size: 2.2rem;
		}

	}

	.action__text {
		transition: 0.6s;
		color: black;
		font-size: 1rem;
		font-style: italic;
		text-align: justify;
		padding: 1.2rem 3rem 0.3rem 3rem;
		text-justify: inter-word;
		border-top: 1px solid $sbs-dksand;
		height: 100%;

		// if they insist on using an iphone
		@media (max-height: 740px) {
			padding: 0.4rem 1rem 0.3rem 1rem;
			font-size: 1rem;
			border: none;
		}
	}

	&:hover {
		transition: 0.2s;
		background-color: #ffef;
		// outline: 1px solid $sbs-ltblue;
		.action__title {
			transition: 0.2s;
			border-top: 3px solid $light-mud;
		}
		.action__icon {
			transition: 0.4s;
			// color: $light-mud;
			color: rgba(49, 46, 70, 0.86);
			width: 100%;
		}
		.action__text {
			border-bottom: 3px solid $light-mud;
		}
	}

}

